Preliminarily add session, repository and handlers
