# swagger/swagger.yml
@@ -121,6 +121,10 @@ definitions:
         type: string
         x-nullable: false
         x-go-custom-tag: 'db:"Phone"'
+      password:
+        type: string
+        x-nullable: false
+        x-go-custom-tag: 'db:"Password"'
       deleted:
         type: boolean
         x-nullable: true
